--- a/jsite/templates/index.html
+++ b/jsite/templates/index.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Template is working</title>
+    <title>TextUtils</title>
 </head>
 <body>
     <h1>Welcome to text analyzer. Enter your text below</h1>
