--- a/jsite/templates/analyze.html
+++ b/jsite/templates/analyze.html
@@ -5,9 +5,14 @@
     <title>Analyzing your text...</title>
 </head>
 <body>
+    <a href="/"><-- back to home</a>
     <h1>Your analyzed text ==> {{purpose}}</h1>
     <p>
-        {{analyzed_text}}
+        {{remove_punctuations}}
+    </p>
+    <h1>Your analyzed text ==> {{purpose}}</h1>
+    <p>
+        {{CAPITALIZED}}
     </p>
 </body>
 </html> 
