--- a/jsite/templates/index.html
+++ b/jsite/templates/index.html
@@ -9,7 +9,9 @@
     <form action="/analyze" method="get">
         <textarea name='text' style='width: 771px; height: 141px;'></textarea><br>
         <input type="checkbox" name="removepunc">Remove Punctuations!<br>
+        <input type="checkbox" name="capitalize">CAPITALIZE!<br>
         <button type="submit">analyze text!</button><br>
     </form>
+    <!-- <a href="/ex1">Excercise 1</a> -->
 </body>
 </html> 
