--- a/jsite/templates/analyze.html
+++ b/jsite/templates/analyze.html
@@ -5,6 +5,7 @@
     <title>Analyzing your text...</title>
 </head>
 <body>
+    <button onclick="window.location.href='/'">back to home</button>
     <a href="/"><-- back to home</a>
     <h1>Your analyzed text ==> {{purpose}}</h1>
     <p>
