--- a/jsite/templates/ex1.html
+++ b/jsite/templates/ex1.html
@@ -5,7 +5,8 @@
     <title>Excercise 1</title>
 </head>
 <body>
-    <a href="/"><-- Back to Home!</a>
+    <button onclick="window.location.href='/'">back to home</button>
+    <!-- <a href="/"><-- Back to Home!</a> -->
     <center>
         <h1>Personal Navigator</h1>
         <table border="1">
