some minor changes in the templates and views.py module

--- a/jsite/templates/analyze.html
+++ b/jsite/templates/analyze.html
@@ -6,12 +6,12 @@
 </head>
 <body>
     <button onclick="window.location.href='/'">back to home</button>
-    <a href="/"><-- back to home</a>
-    <h1>Your analyzed text ==> {{purpose}}</h1>
+    <!-- <a href="/"><-- back to home</a> -->
+    <h1>Your analyzed text for removing punctuations ==> {{purpose}}</h1>
     <p>
         {{remove_punctuations}}
     </p>
-    <h1>Your analyzed text ==> {{purpose}}</h1>
+    <h1>Your analyzed text for capitalizing ==> {{purpose}}</h1>
     <p>
         {{CAPITALIZED}}
     </p>
