--- a/jsite/templates/index.html
+++ b/jsite/templates/index.html
@@ -8,7 +8,9 @@
     <h1>Welcome to text analyzer. Enter your text below</h1>
     <form action="/analyze" method="get">
         <textarea name='text' style='width: 771px; height: 141px;'></textarea><br>
-        <input type="checkbox" name="removepunc">Remove Punctuations!<br>
+        <input type="checkbox" name="removepunc">Remove Punctuations!<br> 
+        <!-- the name="removepunc" is a variable inside the views.py module 
+        and if its checked that returns a value of true which means on in the console    -->
         <input type="checkbox" name="capitalize">CAPITALIZE!<br>
         <button type="submit">analyze text!</button><br>
     </form>
