added a new function inside the analyze module

--- a/jsite/templates/analyze.html
+++ b/jsite/templates/analyze.html
@@ -15,5 +15,9 @@
     <p>
         {{CAPITALIZED}}
     </p>
+    <h1>Your analyzed text for capitalizing ==> {{purpose}}</h1>
+    <p>
+        {{NewLineRemover}}
+    </p>
 </body>
 </html> 
