--- a/jsite/templates/index.html
+++ b/jsite/templates/index.html
@@ -12,6 +12,7 @@
         <!-- the name="removepunc" is a variable inside the views.py module 
         and if its checked that returns a value of true which means on in the console    -->
         <input type="checkbox" name="capitalize">CAPITALIZE!<br>
+        <input type="checkbox" name="newlineremover">New Line Remover!<br>
         <button type="submit">analyze text!</button><br>
     </form>
     <!-- <a href="/ex1">Excercise 1</a> -->
