--- a/jsite/templates/index.html
+++ b/jsite/templates/index.html
@@ -13,6 +13,7 @@
         and if its checked that returns a value of true which means on in the console    -->
         <input type="checkbox" name="capitalize">CAPITALIZE!<br>
         <input type="checkbox" name="newlineremover">New Line Remover!<br>
+        <input type="checkbox" name="spaceremover">Space Remover!<br>
         <button type="submit">analyze text!</button><br>
     </form>
     <!-- <a href="/ex1">Excercise 1</a> -->
