modified the templating for the new text utiliy function

--- a/jsite/templates/analyze.html
+++ b/jsite/templates/analyze.html
@@ -19,5 +19,9 @@
     <p>
         {{NewLineRemover}}
     </p>
+    <h1>Your analyzed text for Removing extra spaces ==> {{purpose}}</h1>
+    <p>
+        {{spaceremover}}
+    </p>
 </body>
 </html> 
