--- a/jsite/templates/analyze.html
+++ b/jsite/templates/analyze.html
@@ -23,5 +23,9 @@
     <p>
         {{spaceremover}}
     </p>
+    <h1>Your analyzed text for Counting Characters ==> {{purpose}}</h1>
+    <p>
+        {{charcounter}}
+    </p>
 </body>
 </html> 
