--- a/jsite/templates/index.html
+++ b/jsite/templates/index.html
@@ -14,6 +14,7 @@
         <input type="checkbox" name="capitalize">CAPITALIZE!<br>
         <input type="checkbox" name="newlineremover">New Line Remover!<br>
         <input type="checkbox" name="spaceremover">Space Remover!<br>
+        <input type="checkbox" name="charcounter">Character Counter!<br>
         <button type="submit">analyze text!</button><br>
     </form>
     <!-- <a href="/ex1">Excercise 1</a> -->
