--- a/jsite/templates/index.html
+++ b/jsite/templates/index.html
@@ -1,22 +1,70 @@
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TextUtils</title>
-</head>
-<body>
-    <h1>Welcome to text analyzer. Enter your text below</h1>
-    <form action="/analyze" method="get">
-        <textarea name='text' style='width: 771px; height: 141px;'></textarea><br>
-        <input type="checkbox" name="removepunc">Remove Punctuations!<br> 
-        <!-- the name="removepunc" is a variable inside the views.py module 
-        and if its checked that returns a value of true which means on in the console    -->
-        <input type="checkbox" name="capitalize">CAPITALIZE!<br>
-        <input type="checkbox" name="newlineremover">New Line Remover!<br>
-        <input type="checkbox" name="spaceremover">Space Remover!<br>
-        <input type="checkbox" name="charcounter">Character Counter!<br>
-        <button type="submit">analyze text!</button><br>
-    </form>
-    <!-- <a href="/ex1">Excercise 1</a> -->
-</body>
-</html> 
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Text Utility</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
+  </head>
+  <body>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#">UJD-TextUtils.com</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="#">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">About Us</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" aria-disabled="true">Disabled</a>
+        </li>
+      </ul>
+      <form class="d-flex" role="search">
+        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search"/>
+        <button class="btn btn-outline-success" type="submit">Search</button>
+      </form>
+    </div>
+  </div>
+</nav>
+<div class="alert alert-success alert-dismissible fade show" role="alert">
+  <strong>Welcome to the TextUtils</strong> You can do anything with your text!
+  <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+</div>
+<div class="container">
+    <form class="form" action="/analyze" method="get">
+    <div class="mb-3">
+        <label for="exampleFormControlTextarea1" class="form-label">Text Area</label>
+        <textarea class="form-control" id="exampleFormControlTextarea1" rows="9"></textarea>
+    </div>
+    <div class="form-check form-switch">
+    <input class="form-check-input" type="checkbox" name="CAPITALIZE" role="switch" id="switchCheckDefault">
+    <label class="form-check-label" for="switchCheckDefault">Capitalize</label>
+    </div>
+    <div class="form-check form-switch">
+    <input class="form-check-input" type="checkbox" name="newlineremover" role="switch" id="switchCheckDefault">
+    <label class="form-check-label" for="switchCheckDefault">Next Line Remover</label>
+    </div>
+    <div class="form-check form-switch">
+    <input class="form-check-input" type="checkbox" name="spaceremover" role="switch" id="switchCheckDefault">
+    <label class="form-check-label" for="switchCheckDefault">Extra Space Remover</label>
+    </div>
+    <div class="form-check form-switch">
+    <input class="form-check-input" type="checkbox" name="charcounter" role="switch" id="switchCheckDefault">
+    <label class="form-check-label" for="switchCheckDefault">Character Counter</label>
+    </div>
+    <div class="form-check form-switch">
+    <input class="form-check-input" type="checkbox" name="removepunc" role="switch" id="switchCheckDefault">
+    <label class="form-check-label" for="switchCheckDefault">Remove Punctuations</label>
+    </div>
+    <button type="submit" class="btn btn-dark mt-2">Analyze Text</button>
+</div>
+</form>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
+  </body>
+</html>
