--- a/jsite/templates/index.html
+++ b/jsite/templates/index.html
@@ -40,10 +40,10 @@
     <form class="form" action="/analyze" method="get">
     <div class="mb-3">
         <label for="exampleFormControlTextarea1" class="form-label">Text Area</label>
-        <textarea class="form-control" id="exampleFormControlTextarea1" rows="9"></textarea>
+        <textarea class="form-control" id="exampleFormControlTextarea1" name='text' rows="9"></textarea>
     </div>
     <div class="form-check form-switch">
-    <input class="form-check-input" type="checkbox" name="CAPITALIZE" role="switch" id="switchCheckDefault">
+    <input class="form-check-input" type="checkbox" name="capitalize" role="switch" id="switchCheckDefault">
     <label class="form-check-label" for="switchCheckDefault">Capitalize</label>
     </div>
     <div class="form-check form-switch">
