--- a/jsite/templates/analyze.html
+++ b/jsite/templates/analyze.html
@@ -41,23 +41,23 @@
     <!-- <a href="/"><-- back to home</a> -->
     <h1>Your analyzed text for removing punctuations ==> {{purpose}}</h1>
     <p>
-        {{remove_punctuations}}
+        <pre>{{remove_punctuations}}</pre>
     </p>
     <h1>Your analyzed text for capitalizing ==> {{purpose}}</h1>
     <p>
-        {{CAPITALIZED}}
+        <pre>{{CAPITALIZED}}</pre>
     </p>
     <h1>Your analyzed text for capitalizing ==> {{purpose}}</h1>
     <p>
-        {{NewLineRemover}}
+        <pre>{{NewLineRemover}}</pre>
     </p>
     <h1>Your analyzed text for Removing extra spaces ==> {{purpose}}</h1>
     <p>
-        {{spaceremover}}
+        <pre>{{spaceremover}}</pre>
     </p>
     <h1>Your analyzed text for Counting Characters ==> {{purpose}}</h1>
     <p>
-        {{charcounter}}
+        <pre>{{charcounter}}</pre>
     </p>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
   </body>
