Optimized the views.py module

--- a/jsite/templates/analyze.html
+++ b/jsite/templates/analyze.html
@@ -42,31 +42,8 @@
     <ul>
     <li><h1>Your analyzed text for Removing Punctuations ==> {{purpose}}</h1>
     <p>
-        <pre>{{remove_punctuations}}</pre>
-    </p>
-    </li>
-    <li>
-    <h1>Your analyzed text for Capitalizing ==> {{purpose}}</h1>
-    <p>
-        <pre>{{CAPITALIZED}}</pre>
-    </p>
-    </li>
-    <li>
-    <h1>Your analyzed text for New Line Removing ==> {{purpose}}</h1>
-    <p>
-        <pre>{{NewLineRemover}}</pre>
-    </p>
-    </li>
-    <li>
-    <h1>Your analyzed text for Removing Extra Spaces ==> {{purpose}}</h1>
-    <p>
-        <pre>{{spaceremover}}</pre>
-    </p>
-    </li>
-    <li>
-    <h1>Your analyzed text for Counting Characters ==> {{purpose}}</h1>
-    <p>
-        <pre>{{charcounter}}</pre>
+        <pre>{{analyzed}}</pre>
+        <pre>{{countedanalyzed}}</pre>
     </p>
     </li>
     </ul>
