--- a/jsite/templates/error_when_no_util.html
+++ b/jsite/templates/error_when_no_util.html
@@ -32,24 +32,15 @@
     </div>
   </div>
 </nav>
-<div class="alert alert-success alert-dismissible fade show" role="alert">
-  <strong>Alert! Task Has Been Perform Successfully!</strong> Text has been analyzed!
+<div class="alert alert-warning alert-dismissible fade show" role="alert">
+  <strong>Warning! You didn't select any of the Utility function!</strong> Text is not analyzed!
   <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
 </div>
-<div class="container border border-4 mt-5 bg-light" style="width: fit-content; height: fit-content;">
-    <!-- <button onclick="window.location.href='/'">back to home</button>
-    <a href="/"><-- back to home</a> -->
-    <ul>
-    <li><p style="font-weight: bolder;">Your text after analysis has been {{purpose}}</p>
-    <p>
-        <pre style="font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;">{{analyzed}}</pre>
-        <pre>{{countedanalyzed}}</pre>
-    </p>
-    </li>
-    </ul>
-    <div style="display: flex; justify-content: center;">
+<div class="container border border-4 mt-5 bg-light" style="width: 50%; height: 40vh; align-content: center;">
+    <center>
+        <p style="font-weight: bold;">Please select atleast one of the utility function!</p>
         <a class="btn btn-primary mb-3" href="/" role="button">Back to home!</a>
-    </div>
+    </center> 
 </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
   </body>
