--- a/jsite/templates/analyze.html
+++ b/jsite/templates/analyze.html
@@ -40,10 +40,10 @@
     <!-- <button onclick="window.location.href='/'">back to home</button>
     <a href="/"><-- back to home</a> -->
     <ul>
-    <li><p style="font-weight: bolder;">Your text after analysis has been {{purpose}}</p>
+    <li><p style="font-weight: bolder;">The following functions have been applied to the text : {{purpose}}</p>
     <p>
         <pre style="font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;">{{analyzed}}</pre>
-        <pre>{{countedanalyzed}}</pre>
+        <pre style="font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;">{{countedanalyzed}}</pre>
     </p>
     </li>
     </ul>
