--- a/jsite/templates/error_when_no_util.html
+++ b/jsite/templates/error_when_no_util.html
@@ -28,13 +28,13 @@
                             <a class="nav-link active" aria-current="page"
                                 href="/">Home</a>
                         </li>
-                        <li class="nav-item">
+                        <!-- <li class="nav-item">
                             <a class="nav-link" href="#">About Us</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link active"
                                 aria-disabled="true">Disabled</a>
-                        </li>
+                        </li> -->
                     </ul>
                     <form class="d-flex" role="search">
                         <input class="form-control me-2" type="search"
