--- a/jsite/templates/index.html
+++ b/jsite/templates/index.html
@@ -25,9 +25,9 @@
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="/">Home</a>
             </li>
-            <li class="nav-item">
+            <!-- <li class="nav-item">
               <a class="nav-link" href="#">About Us</a>
-            </li>
+            </li> -->
             <!-- <li class="nav-item">
               <a class="nav-link active" aria-disabled="true">Disabled</a>
             </li> -->
