added typed.js for appealing front-end

--- a/jsite/templates/analyze.html
+++ b/jsite/templates/analyze.html
@@ -56,9 +56,9 @@
             applied to the text : {{purpose}}</p>
           <p>
             <pre
-              style="font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;">{{analyzed}}</pre>
+              style="font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;"><h2>{{analyzed}}</h2></pre>
             <pre
-              style="font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;">Character Count : {{countedanalyzed}}</pre>
+              style="font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;"><h2>Character Count : {{countedanalyzed}}</h2></pre>
           </p>
         </li>
       </ul>
