--- a/jsite/templates/index.html
+++ b/jsite/templates/index.html
@@ -51,6 +51,7 @@
     <div class="container">
       <form class="form" action="/analyze/" method="post"> {% csrf_token %}
         <div class="mb-3">
+          <h1><span id="typed-text" style="color: black;"></span></h1>
           <label for="exampleFormControlTextarea1" class="form-label">Text
             Area</label>
           <textarea class="form-control" id="exampleFormControlTextarea1"
@@ -93,5 +94,13 @@
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
       crossorigin="anonymous"></script>
+    <script>
+  var typed = new Typed('#typed-text', {
+    strings: ['Welcome to TextUtils!', 'Analyze your text like a pro.', 'Fast, Clean & Powerful.'],
+    typeSpeed: 50,
+    backSpeed: 30,
+    loop: true
+  });
+</script>
   </body>
 </html>
